@@ -581,4 +581,70 @@ presets = {
             {type="item",       name="space-science-pack",            quantity=10000},
         }
     },
+
+
+    ["Industrial Revolution 2"] = {
+        required_mods = {"IndustrialRevolution"},
+        milestones = {
+            {type="item",       name="automation-science-pack", quantity=1},
+            {type="technology", name="ir2-bronze-milestone",    quantity=1},
+            {type="technology", name="ir2-glass-milestone",     quantity=1},
+            {type="item",       name="logistic-science-pack",   quantity=1},
+            {type="technology", name="ir2-iron-milestone",      quantity=1},
+            {type="item",       name="military-science-pack",   quantity=1},
+            {type="item",       name="chemical-science-pack",   quantity=1},
+            {type="technology", name="ir2-gold-milestone",      quantity=1},
+            {type="technology", name="ir2-lead-milestone",      quantity=1},
+            {type="technology", name="ir2-nickel-milestone",    quantity=1},
+            {type="technology", name="ir2-steel-milestone",     quantity=1},
+            {type="item",       name="production-science-pack", quantity=1},
+            {type="technology", name="ir2-chromium-milestone",  quantity=1},
+            {type="technology", name="ir2-stainless-milestone", quantity=1},
+            {type="technology", name="ir2-tellurium-milestone", quantity=1},
+            {type="item",       name="utility-science-pack",    quantity=1},
+            {type="technology", name="rocket-silo",             quantity=1},
+            {type="item",       name="rocket-part",             quantity=100},
+            {type="item",       name="space-science-pack",      quantity=1},
+
+            {type="item",       name="copper-ingot",            quantity=1},
+            {type="item",       name="tin-ingot",               quantity=1},
+            {type="item",       name="bronze-ingot",            quantity=1},
+            {type="item",       name="glass",                   quantity=1},
+            {type="item",       name="iron-ingot",              quantity=1},
+            {type="item",       name="gold-ingot",              quantity=1},
+            {type="item",       name="nickel-ingot",            quantity=1},
+            {type="item",       name="lead-ingot",              quantity=1},
+            {type="item",       name="steel-ingot",             quantity=1},
+            {type="item",       name="invar-ingot",             quantity=1},
+            {type="item",       name="cupronickel-ingot",       quantity=1},
+            {type="item",       name="chromium-ingot",          quantity=1},
+            {type="item",       name="tellurium-ingot",         quantity=1},
+            {type="item",       name="stainless-ingot",         quantity=1},
+            {type="item",       name="plastiglass",             quantity=1},
+            {type="item",       name="electronic-circuit",      quantity=1},
+            {type="item",       name="advanced-circuit",        quantity=1},
+            {type="item",       name="processing-unit",         quantity=1},
+
+            {type="item",       name="steambot",                quantity=1},
+            {type="item",       name="construction-robot",      quantity=1},
+            {type="item",       name="locomotive",              quantity=1},
+            {type="item",       name="monowheel",               quantity=1},
+            {type="item",       name="car",                     quantity=1},
+            {type="item",       name="tank",                    quantity=1},
+            {type="item",       name="spidertron",              quantity=1},
+
+            {type="item",       name="steam-engine",            quantity=1},
+            {type="item",       name="solar-panel",             quantity=1},
+            {type="item",       name="solar-array",             quantity=1},
+            {type="item",       name="uranium-fuel-cell",       quantity=1},
+
+            {type="item",       name="automation-science-pack", quantity=10000},
+            {type="item",       name="logistic-science-pack",   quantity=10000},
+            {type="item",       name="military-science-pack",   quantity=10000},
+            {type="item",       name="chemical-science-pack",   quantity=10000},
+            {type="item",       name="production-science-pack", quantity=10000},
+            {type="item",       name="utility-science-pack",    quantity=10000},
+            {type="item",       name="space-science-pack",      quantity=10000},
+        }
+    }
 }
